compiles and runs, datagen for 1.19 is broken